CC312: Add PSA driver functions for hash API
This patch implements the CC3xx driver entry points for a hash operation
(single-part and multi-part) as described in the PSA Cryptoprocessor
Driver Interface document.

Signed-off-by: Salome Thirot <salome.thirot@arm.com>
Change-Id: I7f8b6f245b766aa86927f159deab6a982475d4da

--- a/lib/ext/cryptocell-312-runtime/codesafe/src/crypto_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/crypto_api/CMakeLists.txt
@@ -8,7 +8,7 @@
 ########################## LIB #################################################
 
 target_include_directories(${CC312_LIB_TARGET}
-    PRIVATE
+    PUBLIC
         common
         cc3x_sym/driver
         cc3x_sym/api
