Crypto: Use NV SEED as default entropy source
MBEDTLS_TEST_NULL_ENTROPY is removed from mbedtls 3.0.0.
Change to use 'MBEDTLS_ENTROPY_NV_SEED' as the default entropy source
if a platform doesn't generate entropy from hardware.

Change-Id: If03c9dec3c6fb0d7bb98721963ac2142d43ed00d
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -160,3 +160,20 @@ target_compile_definitions(platform_region_defs
         $<$<BOOL:${FORWARD_PROT_MSG}>:FORWARD_PROT_MSG=${FORWARD_PROT_MSG}>
         $<$<BOOL:${TFM_CODE_SHARING}>:CODE_SHARING>
 )
+
+#========================= Crypto =============================================#
+target_sources(tfm_psa_rot_partition_crypto
+    PRIVATE
+        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/template/crypto_nv_seed.c>
+        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/template/crypto_dummy_nv_seed.c>
+)
+
+target_compile_definitions(tfm_psa_rot_partition_crypto
+    PRIVATE
+        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:PLATFORM_DUMMY_NV_SEED>
+)
+
+target_include_directories(crypto_service_mbedcrypto
+    PUBLIC
+        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/include>
+)
