Build: Fix the t_cose and attestation test suites build error
When build t_cose or attestation test suites, t_cose build failed
when NS crypto tests is not enabled. Such a dependency is incorrect.
This patch fixes t_cose build when symmetric attestation is enabled.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I1b16edc5c62178a3a8c91e78db689e16ee586232

--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -7,33 +7,18 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_library(tfm_t_cose STATIC EXCLUDE_FROM_ALL)
+################################ t_cose defs ###################################
 
-target_sources(tfm_t_cose
-    PRIVATE
-        $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:src/t_cose_mac0_sign.c>
-        $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:src/t_cose_mac0_verify.c>
-        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:src/t_cose_sign1_sign.c>
-        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:src/t_cose_sign1_verify.c>
-        src/t_cose_util.c
-        src/t_cose_parameters.c
-        crypto_adapters/t_cose_psa_crypto.c
-)
+add_library(tfm_t_cose_defs INTERFACE)
 
-target_include_directories(tfm_t_cose
-    PUBLIC
+target_include_directories(tfm_t_cose_defs
+    INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
 )
 
-target_link_libraries(tfm_t_cose
-    PUBLIC
-        tfm_qcbor
-        psa_interface
-)
-
-target_compile_definitions(tfm_t_cose
-    PUBLIC
+target_compile_definitions(tfm_t_cose_defs
+    INTERFACE
         T_COSE_COMPILE_TIME_CONFIG
         T_COSE_USE_PSA_CRYPTO
         T_COSE_USE_PSA_CRYPTO_FROM_TFM
@@ -44,6 +29,45 @@ target_compile_definitions(tfm_t_cose
         $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:T_COSE_DISABLE_SIGN1>
         $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:T_COSE_DISABLE_MAC0>
         $<$<NOT:$<CONFIG:Debug>>:T_COSE_DISABLE_SHORT_CIRCUIT_SIGN>
+)
+
+############################### t_cose common ##################################
+
+add_library(tfm_t_cose_common INTERFACE)
+
+target_sources(tfm_t_cose_common
+    INTERFACE
+        $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_mac0_sign.c>
+        $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_mac0_verify.c>
+        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_sign1_sign.c>
+        $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_sign1_verify.c>
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_util.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/t_cose_parameters.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/crypto_adapters/t_cose_psa_crypto.c
+)
+
+############################ t_cose non secure #################################
+
+add_library(tfm_t_cose_ns STATIC EXCLUDE_FROM_ALL)
+
+target_link_libraries(tfm_t_cose_ns
+    PUBLIC
+        tfm_t_cose_common
+        tfm_t_cose_defs
+        tfm_qcbor
+        tfm_ns_interface
+)
+
+############################ t_cose secure #####################################
+
+add_library(tfm_t_cose_s STATIC EXCLUDE_FROM_ALL)
+
+target_link_libraries(tfm_t_cose_s
+    PUBLIC
+        tfm_t_cose_common
+        tfm_t_cose_defs
+        tfm_qcbor
+        psa_interface
 )
 
 ############################ t_cose test #######################################
@@ -67,5 +91,5 @@ target_include_directories(tfm_t_cose_test
 
 target_link_libraries(tfm_t_cose_test
     PRIVATE
-        tfm_t_cose
+        tfm_t_cose_ns
 )
