--- a/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
@@ -14,10 +14,14 @@ target_include_directories(${CC312_LIB_TARGET}
 target_sources(${CC312_LIB_TARGET}
     PRIVATE
         src/cc3xx_psa_hash.c
+        src/cc3xx_psa_cipher.c
+
+        src/cc3xx_internal_aes.c
+        src/cc3xx_internal_chacha20.c
 )
 
 target_compile_definitions(${CC312_LIB_TARGET}
     PUBLIC
-    MBEDTLS_PSA_CRYPTO_DRIVERS
-    PSA_CRYPTO_DRIVER_CC3XX
+        MBEDTLS_PSA_CRYPTO_DRIVERS
+        PSA_CRYPTO_DRIVER_CC3XX
 )
