Boot: Integrate MCUboot based on mbedtls-3.0.0
Change-Id: Ia4150d99c8a4c0f73e94030864bb6baf7e75ef49
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -101,6 +101,11 @@ target_link_libraries(bl2_mbedcrypto
         bl2_mbedcrypto_config
 )
 
+target_include_directories(bl2_mbedcrypto
+    PUBLIC
+        ${MBEDCRYPTO_PATH}/library
+)
+
 ############################### CODE SHARING ###################################
 
 if (TFM_CODE_SHARING)
