--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -30,6 +30,18 @@ add_subdirectory(partitions/psa_proxy)
 add_subdirectory(partitions/firmware_update)
 add_subdirectory(partitions/ns_agent)
 add_subdirectory(partitions/idle_partition)
+if (TFM_EXTRA_PARTITION_PATHS)
+    set(POSTFIX 1)
+
+    foreach(EXTRA_PARTITION IN LISTS TFM_EXTRA_PARTITION_PATHS)
+        get_filename_component(EXTRA_PARTITION_NAME ${EXTRA_PARTITION} NAME_WLE)
+        set(TEMP_BINARY_EXTRA_PARTITION
+            ${CMAKE_CURRENT_BINARY_DIR}/partitions/${EXTRA_PARTITION_NAME}_${POSTFIX})
+        add_subdirectory(${EXTRA_PARTITION} ${TEMP_BINARY_EXTRA_PARTITION})
+
+        math(EXPR POSTFIX "${POSTFIX} + 1")
+    endforeach()
+endif()
 
 target_include_directories(secure_fw
     INTERFACE
