FWU: Fix build error when MCUBOOT_ENC_IMAGES is enabled
Change-Id: I7b6c1f90b90ce199194ffe37e572562f293333f8
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/secure_fw/partitions/firmware_update/bootloader/mcuboot/CMakeLists.txt
+++ b/secure_fw/partitions/firmware_update/bootloader/mcuboot/CMakeLists.txt
@@ -25,6 +25,7 @@ target_include_directories(tfm_fwu_mcuboot_util
         ${MCUBOOT_PATH}/boot/bootutil/include
         ${MCUBOOT_PATH}/boot/bootutil/src
         ${CMAKE_CURRENT_SOURCE_DIR}/../
+        ${MBEDCRYPTO_PATH}/include
 )
 
 target_link_libraries(tfm_fwu_mcuboot_util
