Crypto: Add config check
PLATFORM_DUMMY_NV_SEED and CRYPTO_HW_ACCELERATOR
should not be disabled at the same time.
Only one of them should be set to ON.

Change-Id: I1c0c5b187734e3a49b0cea9a3562693bd1d0e11c
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -142,6 +142,7 @@ target_compile_definitions(crypto_service_mbedcrypto_config
         PSA_CRYPTO_SECURE
         # Workaround for https://github.com/ARMmbed/mbedtls/issues/1077
         $<$<OR:$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv8-m.base>,$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv6-m>>:MULADDC_CANNOT_USE_R7>
+        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:PLATFORM_DUMMY_NV_SEED>
 )
 cmake_policy(SET CMP0079 NEW)
 
