Build: Fix build error when Crypto Partition is disabled
This patch fixes build error when Crypto Partition is not enabled,
for example for Musca-B1 with -DFORWARD_PROT_MSG=1 build option.

This patch also replaces CMAKE_SOURCE_DIR with CMAKE_CURRENT_SOURCE_DIR
to have shorter and more stable paths.

Change-Id: I652afe9e48fc8d2391523cd7e835b4617a08515a
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -162,18 +162,20 @@ target_compile_definitions(platform_region_defs
 )
 
 #========================= Crypto =============================================#
-target_sources(tfm_psa_rot_partition_crypto
-    PRIVATE
-        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/template/crypto_nv_seed.c>
-        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/template/crypto_dummy_nv_seed.c>
-)
+if (TFM_PARTITION_CRYPTO)
+    target_sources(tfm_psa_rot_partition_crypto
+        PRIVATE
+            $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_CURRENT_SOURCE_DIR}/ext/common/template/crypto_nv_seed.c>
+            $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_CURRENT_SOURCE_DIR}/ext/common/template/crypto_dummy_nv_seed.c>
+    )
 
-target_compile_definitions(tfm_psa_rot_partition_crypto
-    PRIVATE
-        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:PLATFORM_DUMMY_NV_SEED>
-)
+    target_compile_definitions(tfm_psa_rot_partition_crypto
+        PRIVATE
+            $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:PLATFORM_DUMMY_NV_SEED>
+    )
 
-target_include_directories(crypto_service_mbedcrypto
-    PUBLIC
-        $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_SOURCE_DIR}/platform/include>
-)
+    target_include_directories(crypto_service_mbedcrypto
+        PUBLIC
+            $<$<BOOL:${PLATFORM_DUMMY_NV_SEED}>:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    )
+endif()
