--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -164,18 +164,30 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 #if TFM_LVL == 3
     .assets                         = {
         {
-            .mem.addr_x             = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
-            .mem.addr_y             = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
-            .attr                   = ASSET_MEM_RD_BIT | ASSET_MEM_WR_BIT,
+            .mem.start              = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_START$$Base),
+            .mem.limit              = PART_REGION_ADDR(PT_{{manifest.name}}_PRIVATE, _DATA_END$$Base),
+            .attr                   = ASSET_ATTR_READ_WRITE,
         },
 {% if counter.asset_counter > 0 %}
     {% for region in manifest.mmio_regions %}
         {% if region.conditional %}
 #ifdef {{region.conditional}}
         {% endif %}
+        {% if region.base and region.size %}
         {
-            .dev.addr_ref           = PTR_TO_REFERENCE({{region.name}}),
-            .attr                   = ASSET_DEV_REF_BIT,
+            .mem.start              = {{region.base}},
+            .mem.limit              = {{region.base}} + {{region.size}},
+            .attr                   = ASSET_ATTR_NUMBERED_MMIO
+        {% elif region.name %}
+        {
+            .dev.dev_ref            = PTR_TO_REFERENCE({{region.name}}),
+            .attr                   = ASSET_ATTR_NAMED_MMIO
+        {% endif %}
+        {% if region.permission == "READ-WRITE" %}
+                                    | ASSET_ATTR_READ_WRITE,
+        {% else %}
+                                    | ASSET_ATTR_READ_ONLY,
+        {% endif %}
         },
         {% if region.conditional %}
 #endif
@@ -190,9 +202,21 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
         {% if region.conditional %}
 #ifdef {{region.conditional}}
         {% endif %}
+        {% if region.base and region.size %}
         {
-            .dev.addr_ref           = PTR_TO_REFERENCE({{region.name}}),
-            .attr                   = ASSET_DEV_REF_BIT,
+            .mem.start              = {{region.base}},
+            .mem.limit              = {{region.base}} + {{region.size}},
+            .attr                   = ASSET_ATTR_NUMBERED_MMIO
+        {% elif region.name %}
+        {
+            .dev.dev_ref            = PTR_TO_REFERENCE({{region.name}}),
+            .attr                   = ASSET_ATTR_NAMED_MMIO
+        {% endif %}
+        {% if region.permission == "READ-WRITE" %}
+                                    | ASSET_ATTR_READ_WRITE,
+        {% else %}
+                                    | ASSET_ATTR_READ_ONLY,
+        {% endif %}
         },
         {% if region.conditional %}
 #endif
