--- a/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
+++ b/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
@@ -40,34 +40,11 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_ITS_SET",
+      "name": "TFM_INTERNAL_TRUSTED_STORAGE_SERVICE",
       "sid": "0x00000070",
       "non_secure_clients": true,
-      "connection_based": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_ITS_GET",
-      "sid": "0x00000071",
-      "non_secure_clients": true,
-      "connection_based": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_ITS_GET_INFO",
-      "sid": "0x00000072",
-      "non_secure_clients": true,
-      "connection_based": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_ITS_REMOVE",
-      "sid": "0x00000073",
-      "non_secure_clients": true,
-      "connection_based": true,
+      "connection_based": false,
+      "stateless_handle": 3,
       "version": 1,
       "version_policy": "STRICT"
     },
