Partitions: Change the Attestation service in Proxy to stateless
The TF-M Attestation service is going to be changed to stateless. This
patch changes the Attestation service in Proxy Partition to stateless.

Change-Id: If79ccd85d64a5e07f5d126af8f8f78dc984fb79f
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
+++ b/secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml
@@ -24,18 +24,11 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_ATTEST_GET_TOKEN",
+      "name": "TFM_ATTESTATION_SERVICE",
       "sid": "0x00000020",
       "non_secure_clients": true,
-      "connection_based": true,
-      "version": 1,
-      "version_policy": "STRICT"
-    },
-    {
-      "name": "TFM_ATTEST_GET_TOKEN_SIZE",
-      "sid": "0x00000021",
-      "non_secure_clients": true,
-      "connection_based": true,
+      "connection_based": false,
+      "stateless_handle": 4,
       "version": 1,
       "version_policy": "STRICT"
     },
