build: add secure debug support to bl2
ADAC (Authenticated Debug Access Control) is an ARM's specification
to securely enable debug of the target device. The commit integrates
psa-adac, an implementation of ADAC, to tf-m bootloading stage bl2.

Change-Id: Iac0f20f162d3c5b9d3e209c188a60e5556e1d943
Signed-off-by: Satish Kumar <satish.kumar01@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -162,7 +162,22 @@ if(BL2)
             $<$<BOOL:${ATTEST_INCLUDE_COSE_KEY_ID}>:ATTEST_INCLUDE_COSE_KEY_ID>
             $<$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>:PLATFORM_DEFAULT_NV_COUNTERS>
             $<$<BOOL:${PLATFORM_DEFAULT_OTP_WRITEABLE}>:OTP_WRITEABLE>
+    )
+
+    if (${PLATFORM_PSA_ADAC_SECURE_DEBUG})
+
+        target_link_libraries(platform_bl2
+            PRIVATE
+                trusted-firmware-m-psa-adac
         )
+
+        target_compile_definitions(platform_bl2
+            PRIVATE
+                PLATFORM_PSA_ADAC_SECURE_DEBUG
+        )
+
+    endif()
+
 endif()
 
 #========================= Platform region defs ===============================#
