adac: cc312 based implementation of adac crypto backend
This commit provides implementation of ADAC (secure debug) crypto
APIs based on CC312 crypto cell. ADAC uses these APIs for its
cryptographic operations.

Change-Id: I66bd0c22a75725f6b5ac7959e069fdbc90791e14
Signed-off-by: Satish Kumar <satish.kumar01@arm.com>

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -50,6 +50,10 @@ if(BL2)
             ${CMAKE_CURRENT_SOURCE_DIR}
     )
 
+    if (${PLATFORM_PSA_ADAC_SECURE_DEBUG})
+        add_subdirectory(psa-adac)
+    endif()
+
     target_link_libraries(bl2_crypto_hw
         PUBLIC
             ${CC312_LIB_PREFIX}cc312
