Partition: Rename 'NS Proxy' to 'NS Agent'
'Proxy' clashes with 'PSA Proxy', rename 'NS Proxy' to 'NS Agent'.

Change-Id: I06b0e975a8a89ba0505482defeb0a53022f01421
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/secure_fw/partitions/ns_agent/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent/CMakeLists.txt
@@ -10,5 +10,5 @@ cmake_policy(SET CMP0079 NEW)
 
 target_sources(tfm_partitions
     INTERFACE
-        $<$<BOOL:${TFM_PSA_API}>:${CMAKE_CURRENT_SOURCE_DIR}/load_info_ns_proxy.c>
+        $<$<BOOL:${TFM_PSA_API}>:${CMAKE_CURRENT_SOURCE_DIR}/load_info_ns_agent.c>
 )
