Platform: Update Diphda BL1 cmake
To be more easily extensible, and avoid potential compilation issues
with the use of the BL1 flag.

Change-Id: I02aae694637ff25acee19b8652147e9195f18111
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -160,6 +160,7 @@ endif()
 #TODO maybe just link the other platforms to this
 target_compile_definitions(platform_region_defs
     INTERFACE
+        $<$<BOOL:${BL1}>:BL1>
         $<$<BOOL:${BL2}>:BL2>
         $<$<BOOL:${SECURE_UART1}>:SECURE_UART1>
         DAUTH_${DEBUG_AUTHENTICATION}
