tf-m-tests: synchronize with upstream up to v1.4.0
Synchronize with the upstream tf-m-tests repository up to v1.4.0
release with commit SHA e1a8c9fb8394b1f6ea66d2611c070915b0d4b573.

Signed-off-by: Ioannis Glaropoulos <Ioannis.Glaropoulos@nordicsemi.no>

--- a/tf-m-tests/test/suites/attestation/CMakeLists.txt
+++ b/tf-m-tests/test/suites/attestation/CMakeLists.txt
@@ -44,7 +44,7 @@ target_compile_definitions(tfm_test_suite_attestation_ns
 target_link_libraries(tfm_test_suite_attestation_ns
     PRIVATE
         tfm_qcbor
-        tfm_t_cose
+        tfm_t_cose_ns
         tfm_test_framework_ns
         #TODO I'm not sure this should _really_ be linked here
         tfm_attestation_defs
@@ -89,7 +89,7 @@ if (TEST_S)
     target_link_libraries(tfm_test_suite_attestation_s
         PRIVATE
             tfm_qcbor
-            tfm_t_cose
+            tfm_t_cose_s
             tfm_test_framework_s
             tfm_attestation_defs
             tfm_boot_status
