SPM: Rename 'irq_defs' into 'interrupt_defs'
'irq' looks a bit constraint which is not aligned with
the header file name in the same folder.

Change-Id: Ib3e003bfdfa8d30d01d85cb8ba078e86c27f3703
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -11,7 +11,7 @@
 #include <stddef.h>
 #include "region.h"
 #include "spm_ipc.h"
-#include "load/irq_defs.h"
+#include "load/interrupt_defs.h"
 #include "load/partition_defs.h"
 #include "load/service_defs.h"
 #include "load/asset_defs.h"
