SPM: Abstract and update SPM module 'thread'
Thread is now abstracted, with an example implementation
'compact thread', providing different thread implementation
is now possible.

The main changes are:

- "wait" module into "thread", as it accesses thread internal members.

- Context control (sp, splimit, lr) belongs to partition now and stored
  in partition struct managed by SPM, instead of being saved on thread
  members.

- Abstracted functionalities used by both thread initialization and
  de-privileged FLIH, and future SFN as well.

- Interrupt signal is set in ISR instead of FLIH_RET SVC handler
- Interrupt owner PID and signal are not stacked anymore. Because
  they can be fetched in State Context, passed by the
  tfm_flih_deprivileged_handling() function

- The context of the running FLIH Function - including the stack
  pointers and the owner Partition - are updated to the new current
  thread struct

Change-Id: I6348e2d0522791ddb1f754ecf86b26bfb5e11daa
Signed-off-by: Ken Liu <Ken.Liu@arm.com>
Co-authored-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -55,8 +55,7 @@ target_sources(tfm_spm
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_core_svcalls_ipc.c>
         $<$<AND:$<BOOL:${TFM_PSA_API}>,$<NOT:$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>>:cmsis_psa/tfm_nspm_ipc.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_pools.c>
-        $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_thread.c>
-        $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_wait.c>
+        $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/thread.c>
         $<$<NOT:$<BOOL:${TFM_PSA_API}>>:cmsis_func/main.c>
         $<$<NOT:$<BOOL:${TFM_PSA_API}>>:cmsis_func/arch.c>
         $<$<NOT:$<BOOL:${TFM_PSA_API}>>:cmsis_func/spm_func.c>
