Build: Simplify TF-M regression test config parse
Search regression test config passed via command line. If regression
test flags are found in CMake cache variables and values are set to ON,
enable corresponding regression test flag in TF-M build.

It can get rid of long list in if condition check of regression test
configs. Developers only need to name regression test group starting
with "TEST_NS" or "TEST_S", without updating the long if condition
check.

Change-Id: I83f0589390d2120afe94feb9f0867f4aa8187202
Signed-off-by: David Hu <david.hu@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ if(BL2)
 endif()
 add_subdirectory(platform)
 
-if(NS AND TFM_TEST)
+if(TFM_NS_REG_TEST OR TFM_S_REG_TEST)
     # Set to ${TFM_TEST_REPO_PATH}/test by default
     add_subdirectory(${TFM_TEST_PATH} ${CMAKE_CURRENT_BINARY_DIR}/test)
 endif()
