CC3XX: Asymetric signing/verification
-This adds the assymetric/signing verification capabilities
 using ECDSA random and koblitz curves and RSA in both
 supported modes

Signed-off-by: Georgios Vasilakis <georgios.vasilakis@nordicsemi.no>
Change-Id: Iaf0ab59fdd2c68103ed3644dbda1dd43ce344f73

--- a/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
@@ -20,9 +20,15 @@ target_sources(${CC312_LIB_TARGET}
         src/cc3xx_psa_entropy.c
         src/cc3xx_psa_key_agreement.c
 
+        src/cc3xx_internal_asn1_util.c
+        src/cc3xx_internal_ecc_util.c
+        src/cc3xx_internal_rsa_util.c
+        src/cc3xx_psa_asymmetric_signature.c
+        src/cc3xx_psa_key_generation.c
+        src/cc3xx_internal_drbg_util.c
+
         src/cc3xx_internal_aes.c
         src/cc3xx_internal_chacha20.c
-        src/cc3xx_internal_ecc.c
         src/cc3xx_internal_ecdh.c
 
         src/aead/cc3xx_psa_aead.c
